--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: stellarkai
-custom: https://www.buymeacoffee.com/stellarkai
+custom: https://www.stellark.xyz
